tests/files/flow_controller_tests/should_run/109.cmdr
x = 25;
print arccsch(x);