tests/files/flow_controller_tests/should_fail/105.cmdr
x = false;
print arccsch(x);